--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
    <meta charset="utf-8">
    <title>Koki's Gallery</title>
    <link rel = "stylesheet", href = "index.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  </head>
  <body>
    <nav class = "nav_bar">
        <div id = "nav_title">
-         Koki's Gallery
+         <a class = "nav_content">Koki's Gallery</a>
        </div>
-       <div calss = "menu">
-         <li class = "menu_content">HOME</li>
-         <li class = "menu_content">ABOUT</li>
-         <li class = "menu_content">WORKS</li>
-         <li class = "menu_content">PHOTOS</li>
+       <div id = "menu">
+          <a>MENU</a>
        </div>
    </nav>
    <header>
      <p id = "name_introduction">KOKI ANDO</p>
+     <p id = "name_introduction">WELCOME TO MY PAGE</p>
     <!-- <img
       class = "mySlides slideshow_animation_fading"
       src = "https://s3-ap-southeast-2.amazonaws.com/koki25ando/andojump1.jpg"
@@ -54,7 +53,20 @@
        <div class = "box forth"></div>
      </div>
    </div>
-
+   <footer>
+     <div>
+       <ul class="follow-me">
+         <li><a href="https://twitter.com/ko25and"><i class="fa fa-twitter"></i></a><li>
+         <li><a href="https://www.facebook.com/koki.ando.3"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/ando-koki-b20820140/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BbMLnsemVRTeXXjYN1%2BnsRA%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-identity_profile_photo">
+           <i class="fa fa-linkedin-square"></i></a>
+         </li>
+         <li><a href="https://github.com/koki25ando"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://www.instagram.com/koki25ando/"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.flickr.com/photos/141696738@N08/"><i class="fa fa-flickr"></i></a></li>
+       </ul>
+     </div>
+   </footer>
    <script src = "index.js"></script>
  </body>
 </html>
