some background gifs and interactive changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
          <a class = "nav_content">Koki's Gallery</a>
        </div>
        <div id = "menu">
-          <a>MENU</a>
+          <a>WORKS</a>
+       </div>
+       <div id = "menu">
+          <a>ABOUT</a>
        </div>
    </nav>
    <header>
@@ -32,6 +35,8 @@
       >
     -->
    </header>
+   <div class = "test">
+   </div>
    <div class = "introduction">
      <p class = "sentence">
        I am a Japanese University Student, currently an exchange student at
